2002-04-16  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.dsp: s/VERSION/AUTOTRACE_VERSION/g.

	* autotrace.vcproj: ditto. Suggested by Martin.

	* autotrace.c (at_version): Use AUTOTRACE_VERSION
	instead of VERSION.
	(at_home_site): Use AUTOTRACE_WEB.

	* autotrace.m4 (AM_PATH_AUTOTRACE): Check version number.

	* configure.in (AUTOTRACE_VERSION, AUTOTRACE_MAJOR_VERSION,
	AUTOTRACE_MINOR_VERSION, AUTOTRACE_MICRO_VERSION,
	AUTOTRACE_WEB): 
	New constants.
	
2002-04-15  Martin Weber <martweb@gmx.net>

	* fit.c (find_half_tangent): 
	(find_tangent): Fixed a bug in tangent 
	calculation.
	
2002-04-15  Masatake YAMATO  <yamato@redhat.com>

	* COPYING.LIB: New file.

	* despeckle.*: Change the license to LGPL.
	
	* input*.*: Likewise.

	* median.c: Likewise.

	* output-*.*: Likewise.

	* quantize.h: Likewise.

	* thin-image.*: Likewise.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.[ch] (at_exception_fatal, at_exception_warning): 
	added "const" to the passig parameter.

	* input-png.c (handle_warning, handle_error): Likewise.
	(init_structs): Cast handle_error and handle_warning that
	are passed to png_create_read_struct.
	(load_image): make width, height and row unsigned short.
	Casted values returned from png_get_image_width.

	Message-ID: <3CAEC662.41EEE71A@gmx.net>.

2002-04-03  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Tag naming scheme): Updated.

	* autotrace.spec.in: Updated.

	* configure.in: Version 0.30.

	* exception.c (at_exception_new): Fix wrong 
	parameter declaration.

2002-04-03  Martin Weber <martweb@gmx.net>

	* exception.h (at_exception_new): Fix wrong 
	parameter declaration.

	* input-pnm.c (struct _PNMRowInfo): Removed.

	Message-ID: <3CA9F839.6A4C291C@gmx.net>.
	
2002-03-30  Martin Weber <martweb@gmx.net>

	* output-swf.c (output_swf_writer): printed
	warning if autotrace runs on windows.

	* autotrace.dsp: Updated.

	* autotrace.vcproj: Updated.

	Message-ID: <3CA74273.90B1D7EF@gmx.net>.
